# pytodo

./: .gitignore  README.md  ROADMAP.md  pixi.toml  pyproject.toml
.github/workflows/: ci.yml  release.yml
docs/: model.md
src/pytodo/: __main__.py  cli.py  config.py  gitrepo.py  migrate.py  models.py  project.py  prompt.py  render.py  service.py  settings.py  storage.py  store.py  todo.py  ui.py  vcs.py  view.py  vocabulary.py
tests/: test_config.py  test_gitrepo.py  test_migrate.py  test_models.py  test_plan.py  test_prompt.py  test_service.py  test_store.py  test_todo.py  test_ui.py  test_vcs.py  test_view.py  test_vocabulary.py
