[project]
authors = [{name = "walcark", email = "kevin.walcarius@cnes.fr"}]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
]
name = "pytodo"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
todo = "pytodo.cli:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.dependencies]
python = ">=3.11"
pytest = "*"
ruff = "*"
fzf = "*"

[tool.pixi.pypi-dependencies]
pytodo = { path = ".", editable = true }

[tool.pixi.tasks]
test = "pytest -q"
lint = "ruff check src tests"
todo = "todo"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
