[project]
authors = [{name = "walcark", email = "kevin.walcarius@cnes.fr"}]
dependencies = [
    "typer>=0.12",
    "rich>=13",
    "pyyaml>=6",
]
name = "pytodo"
requires-python = ">= 3.11"
version = "0.1.0"

[project.scripts]
todo = "pytodo.cli:app"

[build-system]
build-backend = "hatchling.build"
requires = ["hatchling"]

[tool.pixi.workspace]
channels = ["conda-forge"]
platforms = ["linux-64"]

[tool.pixi.pypi-dependencies]
pytodo = { path = ".", editable = true }

[tool.pixi.dependencies]
python = ">=3.11"
fzf = "*"

[tool.pixi.tasks]
todo = "todo"

[tool.pixi.environments]
default = { solve-group = "default" }
dev = { features = ["dev"], solve-group = "default" }

[tool.pixi.feature.dev.dependencies]
ruff = "*"
mypy = ">=1.5"
pytest = "*"
pytest-cov = ">=6.0"

[tool.pixi.feature.dev.tasks]
fmt = "ruff format ."
fmt-check = "ruff format --check ."
lint = "ruff check src tests"
type-check = "mypy src/pytodo"
test = "pytest -q --cov=src/pytodo --cov-report=term-missing"
all = { depends-on = ["fmt", "lint", "type-check", "test"] }

[tool.ruff]
line-length = 100
target-version = "py311"
exclude = [".pixi"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
strict = false
ignore_missing_imports = true
